Prevent ugoira page layout shifting
This puts the load progress in the same place as the seek slider so them
switching doesn't move around the bottom half of the page.

--- a/app/assets/stylesheets/specific/posts.css.scss
+++ b/app/assets/stylesheets/specific/posts.css.scss
@@ -197,6 +197,11 @@ div#c-posts {
     button {
       margin-top: 0.3em;
     }
+
+    #ugoira-load-progress {
+      display: inline;
+      margin-left: 17px;
+    }
   }
 
   div.notice {
